HelloUltraviolet/Fixtures/RejectedSource/Procedures/OverloadingDiagnosticsTable/Expected.uv
//! Expected diagnostic metadata for the OverloadingDiagnosticsTable rejected-source specimen.

expectedDiagnostic("E-SEM-3032", "diag-table.15.Overloading")
